Changed container width to fix issue with spacing and widths

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -22,6 +22,11 @@
   height: 100vh;
 }
 
+.container {
+  width: 100vw !important;
+  padding: 0 30px !important;
+}
+
  .hidden {
      display: none !important;
      visibility: hidden;
@@ -30,9 +35,9 @@
 /*@import "social-share-button";*/
 
 @media (min-width: 970px) {
-    .container {
+    /*.container {
         width: 1000px !important;
-    }
+    }*/
     .portfolio-item {
         margin-top: 20px;
         min-height: 395px !important;
@@ -49,9 +54,7 @@
 }
 
 @media (min-width: 1390px) {
-    .container {
-        width: 1370px !important;
-    }
+
     .portfolio-item h4 {
         min-height: 40px;
     }
